--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Jared K. Slone - Portfolio</title>
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome for Icons (LinkedIn, Google Scholar, Envelope, etc.) -->
@@ -28,7 +28,7 @@
     <nav class="bg-white/80 backdrop-blur-md sticky top-0 z-50 shadow-sm">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
-                <div class="font-bold text-xl text-slate-900 tracking-tight">Your Name</div>
+                <div class="font-bold text-xl text-slate-900 tracking-tight">Jared K. Slone</div>
                 <div class="hidden md:flex space-x-8">
                     <a href="#about" class="text-slate-600 hover:text-primary transition">About</a>
                     <a href="#projects" class="text-slate-600 hover:text-primary transition">Projects</a>
@@ -58,25 +58,22 @@
             <!-- Intro Text -->
             <div class="text-center md:text-left">
                 <h1 class="text-4xl md:text-5xl font-extrabold text-slate-900 mb-4">
-                    Hi, I'm <span class="text-primary">Your Name</span>
+                    <span class="text-primary">Jared K. Slone</span>
                 </h1>
                 <p class="text-xl text-slate-600 mb-6 max-w-2xl">
-                    A Researcher / Developer / Designer based in [City]. I specialize in [Your Field] and I am passionate about building [Things you build].
+                    Researcher / Developer / Scientist based in Houston. I specialize in structural bioinformatis and I am passionate about using mathematics and machine learning to solve difficult problems in biology.
                 </p>
                 
                 <!-- Social Links -->
                 <div class="flex flex-wrap justify-center md:justify-start gap-4">
-                    <a href="mailto:your.email@example.com" class="px-5 py-2.5 bg-slate-900 text-white rounded-lg hover:bg-slate-700 transition flex items-center gap-2">
+                    <a href="js201@rice.edu" class="px-5 py-2.5 bg-slate-900 text-white rounded-lg hover:bg-slate-700 transition flex items-center gap-2">
                         <i class="fas fa-envelope"></i> Email Me
                     </a>
-                    <a href="#" target="_blank" class="px-5 py-2.5 bg-blue-50 text-blue-700 rounded-lg hover:bg-blue-100 transition flex items-center gap-2 border border-blue-100">
+                    <a href="https://www.linkedin.com/in/jared-slone" target="_blank" class="px-5 py-2.5 bg-blue-50 text-blue-700 rounded-lg hover:bg-blue-100 transition flex items-center gap-2 border border-blue-100">
                         <i class="fab fa-linkedin"></i> LinkedIn
                     </a>
-                    <a href="#" target="_blank" class="px-5 py-2.5 bg-white text-slate-700 rounded-lg hover:bg-gray-50 transition flex items-center gap-2 border border-slate-200">
+                    <a href="https://scholar.google.com/citations?user=m6p1HTAAAAAJ&hl=en" target="_blank" class="px-5 py-2.5 bg-white text-slate-700 rounded-lg hover:bg-gray-50 transition flex items-center gap-2 border border-slate-200">
                         <i class="fas fa-graduation-cap"></i> Google Scholar
-                    </a>
-                    <a href="#" target="_blank" class="px-5 py-2.5 bg-white text-slate-700 rounded-lg hover:bg-gray-50 transition flex items-center gap-2 border border-slate-200">
-                        <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
             </div>
@@ -235,7 +232,7 @@
                 <a href="#" class="hover:text-white transition text-2xl"><i class="fab fa-twitter"></i></a>
             </div>
             <p class="text-sm text-slate-500">
-                &copy; <script>document.write(new Date().getFullYear())</script> Your Name. All rights reserved.
+                &copy; <script>document.write(new Date().getFullYear())</script> Jared K. Slone. All rights reserved.
             </p>
         </div>
     </footer>
