--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 
                 <!-- Social Links -->
                 <div class="flex flex-wrap justify-center md:justify-start gap-4">
-                    <a href="js201@rice.edu" class="px-5 py-2.5 bg-slate-900 text-white rounded-lg hover:bg-slate-700 transition flex items-center gap-2">
+                    <a href="js201@rice.edu" target="_blank" class="px-5 py-2.5 bg-slate-900 text-white rounded-lg hover:bg-slate-700 transition flex items-center gap-2">
                         <i class="fas fa-envelope"></i> Email Me
                     </a>
                     <a href="https://www.linkedin.com/in/jared-slone" target="_blank" class="px-5 py-2.5 bg-blue-50 text-blue-700 rounded-lg hover:bg-blue-100 transition flex items-center gap-2 border border-blue-100">
@@ -211,7 +211,7 @@
             </div>
             
             <div class="mt-8">
-                <a href="#" class="inline-flex items-center font-medium text-slate-900 hover:text-primary transition">
+                <a href="https://scholar.google.com/citations?user=m6p1HTAAAAAJ&hl=en" target="_blank" class="inline-flex items-center font-medium text-slate-900 hover:text-primary transition">
                     View Full List on Google Scholar <i class="fas fa-external-link-alt ml-2 text-xs"></i>
                 </a>
             </div>
