--- a/index.html
+++ b/index.html
@@ -99,23 +99,11 @@ Conclusions: STAG-LLM shows tremendous potential for structure-based TCR-pHLA bi
                         </div>
                     </div>
                 </article>
-
-            </div>
-        </div>
-    </section>
-
-     <section id="projects" class="py-16 bg-gray-50">
-        <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl font-bold text-slate-900 mb-12 flex items-center gap-3">
-                <i class="fas fa-code-branch text-primary"></i> Selected Projects
-            </h2>
-
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 
                 <article class="bg-white rounded-xl shadow-sm overflow-hidden hover:shadow-md transition border border-slate-100">
                     <div class="h-48 bg-slate-200 overflow-hidden relative group">
                         <img src="https://placehold.co/800x400/f1f5f9/475569?text=STAG-LLM" 
-                             alt="STAG-LLM Project" 
+                             alt="STEGG Project" 
                              class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105">
                     </div>
                     <div class="p-6">
