--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 
                 <article class="group bg-white rounded-xl shadow-sm overflow-hidden hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col h-full">
                     <div class="h-48 bg-slate-200 overflow-hidden relative">
-                        <img src="https://placehold.co/800x400/f1f5f9/475569?text=STAG-LLM" 
+                        <img src="STAG_LLM_arch.png" 
                              alt="STAG-LLM Project" 
                              class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105">
                     </div>
@@ -105,7 +105,7 @@
                 
                 <article class="group bg-white rounded-xl shadow-sm overflow-hidden hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col h-full">
                     <div class="h-48 bg-slate-200 overflow-hidden relative">
-                        <img src="https://placehold.co/800x400/f1f5f9/475569?text=STEGG" 
+                        <img src="stegg_web.png" 
                              alt="STEGG Project" 
                              class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105">
                     </div>
@@ -129,7 +129,7 @@
 
                 <article class="group bg-white rounded-xl shadow-sm overflow-hidden hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col h-full">
                     <div class="h-48 bg-slate-200 overflow-hidden relative">
-                        <img src="https://placehold.co/800x400/f1f5f9/475569?text=Covid-19+AI" 
+                        <img src="covid-CT.jpg" 
                              alt="Covid-19 AI Project" 
                              class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105">
                     </div>
