--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row items-center gap-10">
             <div class="w-40 h-40 md:w-56 md:h-56 relative shrink-0">
                 <div class="absolute inset-0 bg-gradient-to-tr from-blue-100 to-indigo-100 rounded-full animate-pulse"></div>
-                <img src="https://placehold.co/400x400/e2e8f0/475569?text=Jared+Slone" 
+                <img src="headshot2024.jpg" 
                      alt="Profile Photo" 
                      class="relative w-full h-full rounded-full object-cover border-4 border-white shadow-lg">
             </div>
