--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="pt-6 border-t border-slate-100">
                     <p class="text-xs font-bold text-slate-400 uppercase tracking-wider mb-4">Current Affiliations</p>
                     <div class="flex flex-wrap justify-center md:justify-start gap-6 items-center">
-                        <img src="rice_logo.png" alt="Rice University" class="h-10 w-auto opacity-80 hover:opacity-100 transition grayscale hover:grayscale-0">
-                        <img src="mdacc_logo.png" alt="MD Anderson Cancer Center" class="h-10 w-auto opacity-80 hover:opacity-100 transition grayscale hover:grayscale-0">
+                        <img src="rice_logo.jpg" alt="Rice University" class="h-10 w-auto opacity-80 hover:opacity-100 transition grayscale hover:grayscale-0">
+                        <img src="mdaa_logo.png" alt="MD Anderson Cancer Center" class="h-10 w-auto opacity-80 hover:opacity-100 transition grayscale hover:grayscale-0">
                         <img src="gcc_logo.png" alt="Gulf Coast Consortia" class="h-10 w-auto opacity-80 hover:opacity-100 transition grayscale hover:grayscale-0">
                     </div>
                 </div>
