--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jared K. Slone - Portfolio</title>
+    <title>Jared K. Slone</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -31,11 +31,8 @@
                     <a href="#projects" class="text-slate-600 hover:text-slate-900 transition">Projects</a>
                     <a href="#publications" class="text-slate-600 hover:text-slate-900 transition">Publications</a>
                     <a href="#awards" class="text-slate-600 hover:text-slate-900 transition">Awards</a>
-                    <a href="#contact" class="text-slate-600 hover:text-slate-900 transition">Contact</a>
                 </div>
-                <a href="#contact" class="md:hidden text-slate-600">
-                    <i class="fas fa-envelope"></i>
-                </a>
+                <div class="md:hidden w-6"></div>
             </div>
         </div>
     </nav>
@@ -54,7 +51,7 @@
                     <span class="text-primary">Jared K. Slone</span>
                 </h1>
                 <p class="text-xl text-slate-600 mb-6 max-w-2xl">
-                    Researcher / Developer / Scientist based in Houston. I specialize in structural bioinformatics and I am passionate about using mathematics and machine learning to solve difficult problems in biology.
+                    Researcher / Scientist based in Houston. I specialize in structural bioinformatics and I am passionate about using mathematics and machine learning to solve difficult problems in biology.
                 </p>
                 
                 <div class="flex flex-wrap justify-center md:justify-start gap-4 mb-8">
@@ -84,7 +81,7 @@
     <section id="projects" class="py-16 bg-gray-50">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-3xl font-bold text-slate-900 mb-12 flex items-center gap-3">
-                <i class="fas fa-code-branch text-primary"></i> Selected Projects
+                <i class="fas fa-project-diagram text-primary"></i> Selected Projects
             </h2>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 items-start">
@@ -183,7 +180,7 @@ To address the high false-negative rates of PCR testing and the interpretation b
                                     STEGG: Structural TCR-pMHC Ensemble Generator and Gallery
                                 </h4>
                                 <p class="text-slate-600 leading-relaxed">
-                                    <u>Jared K. Slone</u>, Alexander W. Bock, Maurício Menegatti Rigo, C Zou, A Reuben, LE Kavraki.
+                                    <u>Jared K. Slone</u>, Alexander W. Bock, Maurício Menegatti Rigo, Chengxuan Zou, Alexander Reuben, Lydia E. Kavraki.
                                 </p>
                                 <p class="text-slate-500 text-sm italic mt-1">
                                     Preprint / SSRN.
@@ -219,7 +216,7 @@ To address the high false-negative rates of PCR testing and the interpretation b
                                     Time-lapse analysis of TCR-T cells highlights heterogeneity and kinetics of responses upon antigen stimulation
                                 </h4>
                                 <p class="text-slate-600 leading-relaxed">
-                                    Amanda S Montoya, Peixin Jiang, Yulia Shulga, S Forward, E Rose Assita, EG Bontekoe, <u>Jared K. Slone</u>, et al.
+                                    Amanda S Montoya, Peixin Jiang, Yulia Shulga, Sarah Forward, Emane Rose Assita, Emily G Bontekoe, Minying Zhang, <u>Jared K. Slone</u>, Ludovica La Posta, Eleonora Dondossola, Lydia Kavraki, Jianjun J Zhang, Trevor Brown, John V Heymach, Sheldon Kwok, Alexandre Reuben
                                 </p>
                                 <p class="text-slate-500 text-sm italic mt-1">
                                     Journal for ImmunoTherapy of Cancer, 13 (Suppl 2).
@@ -240,7 +237,7 @@ To address the high false-negative rates of PCR testing and the interpretation b
                                     Unbiased microfluidic isolation of antigen-specific T cells in solid tumors
                                 </h4>
                                 <p class="text-slate-600 leading-relaxed">
-                                    AS Montoya, M Frank, P Jiang, M Zhang, H Nie, E Bontekoe, <u>Jared K. Slone</u>, et al.
+                                    AAmanda S Montoya, Meredith Frank, Peixin Jiang, Minying Zhang, Hui Nie, Emily Bontekoe, <u>Jared K. Slone</u>, Ludovica La Posta, Kavya L Singampalli, Desh Deepak Dixit, Weihong Xiao, Tina Cascone, Jianjun Zhang, Eleonora Dondossola, Lydia Kavraki, Maura Gillison, Pamela L Wenzel, Peter B Lillehoj, John V Heymach, Alexandre Reuben
                                 </p>
                                 <p class="text-slate-500 text-sm italic mt-1">
                                     Journal for ImmunoTherapy of Cancer, 12 (Suppl 2), 216.
@@ -252,7 +249,7 @@ To address the high false-negative rates of PCR testing and the interpretation b
                                     T cell receptor engineering targeting EGFR-mutant non-small cell lung cancer
                                 </h4>
                                 <p class="text-slate-600 leading-relaxed">
-                                    E Bontekoe, M Zhang, P Jiang, A Montoya, <u>Jared K. Slone</u>, L La Posta, J Zhang.
+                                    Emily Bontekoe, Minying Zhang, Peixin Jiang, Amanda Montoya, <u>Jared K. Slone</u>, Ludovica La Posta, Jianjun Zhang, Cassian Yee, Eleonora Dondossola, Lydia Kavraki, Gregory Lizee, John V Heymach, Alexandre Reuben
                                 </p>
                                 <p class="text-slate-500 text-sm italic mt-1">
                                     Journal for ImmunoTherapy of Cancer, 12 (Suppl 2), 358.
@@ -290,7 +287,7 @@ To address the high false-negative rates of PCR testing and the interpretation b
                                     Using generative adversarial networks to produce knots with specified invariants
                                 </h4>
                                 <p class="text-slate-600 leading-relaxed">
-                                    M Hughes, A Eubanks, <u>Jared Slone</u>.
+                                    Mark Hughes, Amy Eubanks, <u>Jared Slone</u>.
                                 </p>
                                 <p class="text-slate-500 text-sm italic mt-1">
                                     2021 Fall Western Sectional Meeting (American Mathematical Society).
@@ -302,7 +299,7 @@ To address the high false-negative rates of PCR testing and the interpretation b
                                     Using deep learning to generate knots with prescribed invariants
                                 </h4>
                                 <p class="text-slate-600 leading-relaxed">
-                                    M Hughes, A Eubanks, <u>Jared Slone</u>.
+                                    Mark Hughes, Amy Eubanks, <u>Jared Slone</u>.
                                 </p>
                                 <p class="text-slate-500 text-sm italic mt-1">
                                     2021 Fall Central Sectional Meeting (American Mathematical Society).
@@ -314,7 +311,7 @@ To address the high false-negative rates of PCR testing and the interpretation b
                                     Physics-informed deep learning with uncertainty quantification for weapons radiography
                                 </h4>
                                 <p class="text-slate-600 leading-relaxed">
-                                    MC Lund, MM Howard, CE Noorda, <u>Jared K. Slone</u>.
+                                    Margaret C Lund, Marylesa M Howard, Chelsey E Noorda, <u>Jared K. Slone</u>.
                                 </p>
                                 <p class="text-slate-500 text-sm italic mt-1">
                                     Technical Report, Nevada National Security Site (NNSS), North Las Vegas, NV.
@@ -401,18 +398,9 @@ To address the high false-negative rates of PCR testing and the interpretation b
         </div>
     </section>
 
-    <footer id="contact" class="bg-slate-900 text-slate-300 py-12">
+    <footer class="bg-slate-900 text-slate-400 py-6">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-2xl font-bold text-white mb-6">Get In Touch</h2>
-            <p class="mb-8 max-w-xl mx-auto">
-                I'm always open to discussing new projects, research collaborations, or just chatting about technology.
-            </p>
-            <div class="flex justify-center gap-6 mb-8">
-                <a href="mailto:js201@rice.edu" class="hover:text-white transition text-2xl"><i class="fas fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/jared-slone" class="hover:text-white transition text-2xl"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/jared-slone" class="hover:text-white transition text-2xl"><i class="fab fa-github"></i></a>
-            </div>
-            <p class="text-sm text-slate-500">
+            <p class="text-sm">
                 &copy; <script>document.write(new Date().getFullYear())</script> Jared K. Slone. All rights reserved.
             </p>
         </div>
