--- a/index.html
+++ b/index.html
@@ -355,10 +355,9 @@ To address the high false-negative rates of PCR testing and the interpretation b
                     <div class="flex items-start justify-between mb-4">
                         <div>
                             <h3 class="text-xl font-bold text-slate-900">Bachelor of Science</h3>
-                            <div class="text-primary font-semibold leading-tight">Applied & Computational Mathematics Emphasis (ACME)</div>
+                            <div class="text-primary font-semibold leading-tight">Applied & Computational Mathematics</div>
                         </div>
-                        <div class="h-10 w-10 flex items-center justify-center bg-blue-50 rounded-full text-blue-700">
-                            <i class="fas fa-university"></i>
+                        <img src="byu_logo.jpg" alt="Rice University" class="h-10 w-auto opacity-90">
                         </div>
                     </div>
                     
