--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="flex flex-col lg:flex-row gap-8 lg:gap-12 items-start">
                     <div class="lg:w-1/3 w-full shrink-0">
                         <div class="rounded-xl overflow-hidden shadow-lg border border-slate-100 bg-slate-50">
-                            <img src="STAG_LLM_arch.png" alt="STAG-LLM Project" class="w-full h-auto object-cover">
+                            <img src="STAG_LLM_arch.png" alt="STAG-LLM Project" class="w-150 h-auto object-cover">
                         </div>
                         <div class="flex flex-wrap gap-2 mt-4">
                             <span class="px-2 py-1 bg-blue-50 text-blue-700 text-xs font-semibold rounded border border-blue-100">Deep Learning</span>
@@ -126,7 +126,7 @@
                 <div class="flex flex-col lg:flex-row gap-8 lg:gap-12 items-start">
                     <div class="lg:w-1/3 w-full shrink-0">
                         <div class="rounded-xl overflow-hidden shadow-lg border border-slate-100 bg-slate-50">
-                            <img src="stegg_web.png" alt="STEGG Project" class="w-full h-auto object-cover">
+                            <img src="stegg_web.png" alt="STEGG Project" class="w-150 h-auto object-cover">
                         </div>
                         <div class="flex flex-wrap gap-2 mt-4">
                             <span class="px-2 py-1 bg-purple-50 text-purple-700 text-xs font-semibold rounded border border-purple-100">Immunology</span>
@@ -148,7 +148,7 @@
                 <div class="flex flex-col lg:flex-row gap-8 lg:gap-12 items-start">
                     <div class="lg:w-1/3 w-full shrink-0">
                         <div class="rounded-xl overflow-hidden shadow-lg border border-slate-100 bg-slate-50">
-                            <img src="covid-CT.jpg" alt="Covid-19 AI Project" class="w-full h-auto object-cover">
+                            <img src="covid-CT.jpg" alt="Covid-19 AI Project" class="w-150 h-auto object-cover">
                         </div>
                         <div class="flex flex-wrap gap-2 mt-4">
                             <span class="px-2 py-1 bg-blue-50 text-blue-700 text-xs font-semibold rounded border border-blue-100">Deep Learning</span>
@@ -346,9 +346,6 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         
                         <div class="bg-white p-4 rounded-lg border border-slate-100 flex items-start gap-3 hover:shadow-md transition">
-                            <div class="shrink-0 pt-1">
-                                <i class="fas fa-award text-yellow-500 text-lg"></i>
-                            </div>
                             <div>
                                 <h4 class="font-bold text-slate-900 text-sm">NLM Training Program Fellowship</h4>
                                 <p class="text-xs text-slate-600 mt-0.5">Biomedical Informatics and Data Science</p>
@@ -356,9 +353,6 @@
                         </div>
 
                         <div class="bg-white p-4 rounded-lg border border-slate-100 flex items-start gap-3 hover:shadow-md transition">
-                            <div class="shrink-0 pt-1">
-                                <i class="fas fa-medal text-yellow-500 text-lg"></i>
-                            </div>
                             <div>
                                 <h4 class="font-bold text-slate-900 text-sm">Best Research Presentation</h4>
                                 <p class="text-xs text-slate-600 mt-0.5">Graduate Research Seminar, Rice University</p>
@@ -366,18 +360,12 @@
                         </div>
 
                         <div class="bg-white p-4 rounded-lg border border-slate-100 flex items-start gap-3 hover:shadow-md transition">
-                            <div class="shrink-0 pt-1">
-                                <i class="fas fa-certificate text-slate-300 text-lg"></i>
-                            </div>
                             <div>
                                 <h4 class="font-bold text-slate-900 text-sm">Marcellus and Shirley Burton Scholarship</h4>
                             </div>
                         </div>
 
                         <div class="bg-white p-4 rounded-lg border border-slate-100 flex items-start gap-3 hover:shadow-md transition">
-                            <div class="shrink-0 pt-1">
-                                <i class="fas fa-certificate text-slate-300 text-lg"></i>
-                            </div>
                             <div>
                                 <h4 class="font-bold text-slate-900 text-sm">Academic Scholarship</h4>
                                 <p class="text-xs text-slate-600 mt-0.5">Brigham Young University</p>
@@ -385,9 +373,6 @@
                         </div>
 
                         <div class="bg-white p-4 rounded-lg border border-slate-100 flex items-start gap-3 hover:shadow-md transition">
-                            <div class="shrink-0 pt-1">
-                                <i class="fas fa-scroll text-slate-300 text-lg"></i>
-                            </div>
                             <div>
                                 <h4 class="font-bold text-slate-900 text-sm">Dean’s List</h4>
                                 <p class="text-xs text-slate-600 mt-0.5">Brigham Young University</p>
@@ -395,9 +380,6 @@
                         </div>
 
                         <div class="bg-white p-4 rounded-lg border border-slate-100 flex items-start gap-3 hover:shadow-md transition">
-                            <div class="shrink-0 pt-1">
-                                <i class="fas fa-star text-slate-300 text-lg"></i>
-                            </div>
                             <div>
                                 <h4 class="font-bold text-slate-900 text-sm">Valedictorian</h4>
                                 <p class="text-xs text-slate-600 mt-0.5">Roy High School</p>
