--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                     <h3 class="text-lg font-bold text-slate-900">PhD Candidate</h3>
                                     <div class="text-primary font-semibold">Computer Science</div>
                                 </div>
-                                <img src="rice_logo.jpg" alt="Rice University" class="h-10 w-auto opacity-80 mix-blend-multiply">
+                                <img src="rice_logo2.png" alt="Rice University" class="h-10 w-auto opacity-80 mix-blend-multiply">
                             </div>
                             <div class="mt-auto">
                                 <div class="text-slate-700 font-medium">Rice University</div>
