--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         Jared K. Slone
                     </h1>
                     <p class="text-lg text-slate-600 mb-8 max-w-2xl font-light leading-relaxed">
-                        Houston-based scientist with expertise in structural bioinformatics. I specialize in structural bioinformatics and my research centers around using mathematics and machine learning to solve difficult problems in biology.
+                        Houston-based scientist. I specialize in structural bioinformatics and my research centers around using mathematical modeling and machine learning to solve difficult problems in biology.
                     </p>
                     
                     <div class="flex flex-wrap justify-center md:justify-start gap-4 mb-10">
