--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         Jared K. Slone
                     </h1>
                     <p class="text-lg text-slate-600 mb-8 max-w-2xl font-light leading-relaxed">
-                        Houston-based scientist. I specialize in structural bioinformatics and my research centers around using mathematical modeling and machine learning to solve difficult problems in biology.
+                        Houston-based scientist specializing in structural bioinformatics. My research intersts center around using mathematical modeling and machine learning to solve difficult problems in biology.
                     </p>
                     
                     <div class="flex flex-wrap justify-center md:justify-start gap-4 mb-10">
@@ -80,7 +80,7 @@
                         <p class="text-xs font-bold text-slate-400 uppercase tracking-widest mb-4">Current Affiliations</p>
                         <div class="flex flex-wrap justify-center md:justify-start gap-6 items-center">
                             <img src="rice_logo.jpg" alt="Rice University" class="h-10 w-auto">
-                            <img src="mdaa_logo.png" alt="MD Anderson Cancer Center" class="h-12 w-auto">
+                            <img src="mdaa_logo.png" alt="MD Anderson Cancer Center" class="h-13 w-auto">
                             <img src="gcc_logo.png" alt="Gulf Coast Consortia" class="h-9 w-auto">
 
                         </div>
