--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                     <div class="lg:w-2/3">
                         <h3 class="text-2xl font-serif font-bold text-slate-900 mb-4">
-                            STAG-LLM: Predicting TCR-pHLA binding with protein language models
+                            STAG-LLM: Predicting TCR-pHLA binding with protein language models and geometric deep learning
                         </h3>
                         <p class="text-slate-600 leading-relaxed text-sm lg:text-base">
                             Strong binding between T cell receptors (TCRs) and peptide–HLA (pHLA) complexes plays a key role in the adaptive immune response. Accurately predicting which TCRs will bind to which pHLAs is central to advancing personalized immunotherapies such as TCR-T. Most existing ML approaches to TCR–pHLA binding prediction rely only on amino acid sequences, limiting their ability to capture the full complexity of binding interactions. Recent advances in protein structure modeling provide a unique opportunity to integrate 3D structural information into ML pipelines. We developed STAG-LLM, a multimodal model that combines protein language models with geometric deep learning to leverage both sequence data and computationally generated 3D structures of TCR–pHLA complexes in making predictions. Our results show that STAG-LLM outperforms existing methods, even when trained on datasets three times smaller. To further validate our model, we conduct in vitro alanine scanning experiments for four peptides and demonstrate a correlation with the attention weights learned by our model and in vitro results. Our findings demonstrate that structure-based approaches can meaningfully improve prediction of TCR–pHLA specificity.
